// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render correctly when the type is flat 1`] = `
<div>
  <button
    class="sc-AxjAm enabNO"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 1`] = `
<div>
  <button
    class="sc-AxjAm jPPpTr"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 2`] = `
<div>
  <button
    class="sc-AxjAm cRGcaf"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 3`] = `
<div>
  <button
    class="sc-AxjAm gWHsMn"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 4`] = `
<div>
  <button
    class="sc-AxjAm fsAewT"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 5`] = `
<div>
  <button
    class="sc-AxjAm lnxQaf"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 6`] = `
<div>
  <button
    class="sc-AxjAm idfFJz"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 7`] = `
<div>
  <button
    class="sc-AxjAm cfXcMn"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 8`] = `
<div>
  <button
    class="sc-AxjAm ecyNiv"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 9`] = `
<div>
  <button
    class="sc-AxjAm jsSYbr"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 10`] = `
<div>
  <button
    class="sc-AxjAm gGtJpP"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 11`] = `
<div>
  <button
    class="sc-AxjAm hlLSXX"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 1`] = `
<div>
  <button
    class="sc-AxjAm ipahIg"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 2`] = `
<div>
  <button
    class="sc-AxjAm gCpmSU"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 3`] = `
<div>
  <button
    class="sc-AxjAm bnnTqo"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 4`] = `
<div>
  <button
    class="sc-AxjAm fmKmmU"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 5`] = `
<div>
  <button
    class="sc-AxjAm eUnVnk"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 6`] = `
<div>
  <button
    class="sc-AxjAm bfMzJY"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 7`] = `
<div>
  <button
    class="sc-AxjAm gQrRs"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 8`] = `
<div>
  <button
    class="sc-AxjAm cByrnQ"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 9`] = `
<div>
  <button
    class="sc-AxjAm fmeTgw"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 10`] = `
<div>
  <button
    class="sc-AxjAm epDVWU"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 11`] = `
<div>
  <button
    class="sc-AxjAm brRZRY"
  >
    Button
  </button>
</div>
`;
